--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -183,7 +183,7 @@
   <body>
    <!-- Replace the existing navbar in base.html with this updated version -->
 <nav class="navbar navbar-expand-lg">
-  <a class="navbar-brand" href="/" data-toggle="tooltip" title="CrimeMap Homepage">CrimeMap</a>
+  <a class="navbar-brand" href="/" data-toggle="tooltip" title="CrimeTrack Homepage">CrimeTrack</a>
   <button
     class="navbar-toggler"
     type="button"
